--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-DATABASE_URL="mysql://root:root@localhost:3306/db-proyecto-titulacion?ssl-mode=REQUIRED"
+DATABASE_URL="mysql://root:root@localhost:3306/db_proyecto_titulacion?ssl-mode=REQUIRED"
 JWT_SECRET="supersecretkey_change_me_in_production"
+
+
+#NODEMAILER 
+GMAIL_USER=gavo3212@gmail.com
+GMAIL_PASS=aodm yrcd eaqw eahh
