--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.1.0",
     "mysql2": "^3.16.2",
+    "nodemailer": "^8.0.0",
     "xlsx": "^0.18.5",
     "zod": "^4.3.6"
   },
